tests/ui/btreemap/btreemap-index-mut-2.stderr
error[E0594]: cannot assign to data in an index of `BTreeMap<u32, u32>`
  --> $DIR/btreemap-index-mut-2.rs:6:9
   |
LL |         map[&0] = 1;
   |         ^^^^^^^^^^^ cannot assign
   |
   = help: trait `IndexMut` is required to modify indexed content, but it is not implemented for `BTreeMap<u32, u32>`
help: to modify a `BTreeMap<u32, u32>`, use `.get_mut()`, `.insert()` or the entry API
   |
LL |         map.insert(&0, 1);
   |            ~~~~~~~~  ~  +
LL |         map.get_mut(&0).map(|val| { *val = 1; });
   |            ~~~~~~~~~  ~~~~~~~~~~~~~~~~~~    ++++
LL |         let val = map.entry(&0).or_insert(1);
   |         +++++++++    ~~~~~~~  ~~~~~~~~~~~~ +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
